--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BearFood</title>
+  <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <header>
+    <h1>BF: BearFood</h1>
+    <h2>Best Friend | Best Food | BearFood</h2>
+    <nav>
+      <a href="#forus">О нас</a>
+      <a href="#advantages">Преимущества</a>
+      <a href="#menu">Меню</a>
+      <a href="#contacts">Контакты</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="forus">
+      <h2>О нас</h2>
+      <img src="https://novate.ru/preview/45269s3.jpg" alt="Вариант заказа">
+      <h3>BF: BearFood — доставка еды в Кепитале и по всей Берляндии. BearFood - лучшая еда от лучших шеф-поваров. </h3>
+    </section>
+
+    <section id="advantages">
+      <h2>Преимущества BF: BearFood</h2>
+      <ul>
+        <li>Доставка по всей Берляндии</li>
+        <li>Рестораны в каждом крупном городе страны</li>
+        <li>Круглосуточная доставка без выходных</li>
+      </ul>
+    </section>
+
+    <section id="menu">
+      <h2>Предлагаемое меню</h2>
+      <table class="menu-table">
+        <thead>
+          <tr>
+            <th>Блюдо</th>
+            <th>Цена</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Стейк из Сёмги с овощами</td>
+            <td class="price">7 ℳ</td>
+          </tr>
+          <tr>
+            <td>Жареные картофель с морковью 400г.</td>
+            <td class="price">2 ℳ</td>
+          </tr>
+          <tr>
+            <td>Клюквенный морс 1л.</td>
+            <td class="price">0.8 ℳ</td>
+          </tr>
+          <tr>
+            <td>Шампиньоны на гриле 200г.</td>
+            <td class="price">1.2 ℳ</td>
+          </tr>
+          <tr>
+            <td>Салат Цезарь</td>
+            <td class="price">1.5 ℳ</td>
+          </tr>
+          <tr>
+            <td>Торт Наполеон</td>
+            <td class="price">3 ℳ</td>
+          </tr>
+          <tr>
+            <td>Котлеты рыбные 3 шт.</td>
+            <td class="price">1 ℳ</td>
+          </tr>
+          <tr>
+            <td>Яблочный сок 1л.</td>
+            <td class="price">0.5 ℳ</td>
+          </tr>
+          <tr>
+            <td>Чай чёрный 1л.</td>
+            <td class="price">0.4 ℳ</td>
+          </tr>
+          <tr>
+            <td>Чай зелёный 1л.</td>
+            <td class="price">0.4 ℳ</td>
+          </tr>
+          <tr>
+            <td>Вода питьевая</td>
+            <td class="price">Бесплатно</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </main>
+
+  <footer id="contacts">
+    <p>Телефон <a href="tel:+252531926492003">+2-525-319-2649-2003</a></p>
+    <p>© Ионин Михаил Павлович 241-351</p>
+  </footer>
+</body>
+</html>
 
